--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ pyyaml = "==3.12"
 rsa = "==3.4.2"
 typing = "==3.6.4"
 uritemplate = "==3.0.0"
-whitenoise = "==3.3.1"
+whitenoise = "*"
 
 [requires]
 python_version = "3.6"
