--- a/misvoti/package.json
+++ b/misvoti/package.json
@@ -12,6 +12,7 @@
     "bootstrap-select": "^1.12.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jquery-confirm": "^3.3.2",
     "jquery-form": "^4.2.2",
     "popper.js": "^1.14.4"
   }
